[project]
name = "cognimem"
version = "1.0.0"
description = "Biologically inspired cognitive memory architecture for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.22",
    "networkx>=3.2.1",
    "sentence-transformers>=2.3.1",
    "pydantic>=2.6.1",
    "apscheduler>=3.10.4",
    "numpy>=1.26.4,<2.0.0",       
    "langchain-core>=0.1.9",       
    "langchain-community>=0.0.10", 
    "pyyaml>=6.0.1",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]